--- a/YoutubeCommentAnalysis/Pages/Contact.cshtml
+++ b/YoutubeCommentAnalysis/Pages/Contact.cshtml
@@ -7,7 +7,7 @@
 <h2>İletişim</h2>
 
 <div id="contactForm" class="container mt-4">
-    <!-- Form Gönderildiğinde Mesaj Gösterimi -->
+    <!-- Mesaj gönderimi başarı durumu -->
     @if (Model.IsSubmitted)
     {
         <div class="alert alert-success mt-4">
