--- a/YoutubeCommentAnalysis/Pages/Logout.cshtml
+++ b/YoutubeCommentAnalysis/Pages/Logout.cshtml
@@ -1,4 +1,4 @@
 ﻿@page
 @model YoutubeCommentAnalysis.Pages.LogoutModel
 
-<!-- Çıkış işlemi yapılırken UI öğesi gerekmez, sadece yönlendirme yapılır. -->
+<!-- Çıkış işlemi yapılırken UI öğesi gerekmez, sadece yönlendirme yapılır -->
